# NDK_AV_SAMPLE

./: README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/devyk/ndk_sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/devyk/ndk_sample/: MainActivity.java  Person.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/devyk/ndk_sample/: ExampleUnitTest.java
audio_video/: build.gradle
audio_video/src/androidTest/java/com/devyk/audioplay/: ExampleInstrumentedTest.java
audio_video/src/main/: AndroidManifest.xml
audio_video/src/main/cpp/: CMakeLists.txt
audio_video/src/main/cpp/gles/: PlayCallback.cpp  PlayCallback.h  gles_play.cpp  gles_play.h  video_play.cpp  video_play.h
audio_video/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  audio_play.cpp
audio_video/src/main/java/com/devyk/audiovideo/: APP.java  SuUtil.java  TestActivity.java  Utils.java
audio_video/src/main/res/layout/: activity_audio_play.xml  activity_video_play.xml  test.xml
audio_video/src/main/res/raw/: _test.pcm
audio_video/src/main/res/values/: strings.xml
audio_video/src/test/java/com/devyk/audioplay/: ExampleUnitTest.java
cmake_application/: build.gradle
cmake_application/src/androidTest/java/com/devyk/cmake_application/: ExampleInstrumentedTest.java
cmake_application/src/main/: AndroidManifest.xml
cmake_application/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cmake_application/src/main/java/com/devyk/cmake_application/: MainActivity.java
cmake_application/src/main/res/values/: strings.xml
cmake_application/src/test/java/com/devyk/cmake_application/: ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/androidTest/java/com/devyk/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_lib.cpp
ffmpeg/src/main/java/com/devyk/ffmpeg/: MainActivity.java
ffmpeg/src/main/res/layout/: activity_main.xml
ffmpeg/src/test/java/com/devyk/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mk_application/: build.gradle
mk_application/src/androidTest/java/com/devyk/mk_application/: ExampleInstrumentedTest.java
mk_application/src/main/: AndroidManifest.xml
mk_application/src/main/java/com/devyk/mk_application/: MainActivity.java
mk_application/src/main/jni/: Android.mk  test_mk.c
mk_application/src/main/res/values/: strings.xml
mk_application/src/test/java/com/devyk/mk_application/: ExampleUnitTest.java
myplayer/: build.gradle
myplayer/src/androidTest/java/com/devyk/myplayer/: ExampleInstrumentedTest.java
myplayer/src/main/: AndroidManifest.xml
myplayer/src/main/java/com/devyk/myplayer/: MainActivity.java
myplayer/src/main/res/layout/: activity_main.xml
myplayer/src/main/res/values/: strings.xml
myplayer/src/test/java/com/devyk/myplayer/: ExampleUnitTest.java
player_common/: build.gradle
player_common/src/androidTest/java/com/devyk/player_common/: ExampleInstrumentedTest.java
player_common/src/main/cpp/: CMakeLists.txt
player_common/src/main/cpp/ffmpeg/include/libswresample/: swresample.h
player_common/src/main/cpp/player/: AudioChannel.cpp  JNICallback.cpp  VideoChannel.cpp  YKPlayer.cpp  player-lib.cpp
player_common/src/main/cpp/player/include/: AudioChannel.h  BaseChannel.h  Constants.h  JNICallback.h  VideoChannel.h  YKPlayer.h  safe_queue.h
player_common/src/main/java/com/devyk/player_common/: Constants.java  PlayerManager.java
player_common/src/main/res/values/: strings.xml
ykav_common/: build.gradle
ykav_common/src/main/: AndroidManifest.xml
ykav_common/src/main/cpp/: CMakeLists.txt
ykav_common/src/main/cpp/player/: AudioChannel.cpp  VideoChannel.cpp  YKPlayer.cpp  player-lib.cpp
ykav_common/src/main/cpp/player/include/: AudioChannel.h  BaseChannel.h  VideoChannel.h  YKPlayer.h
ykav_common/src/main/cpp/pusher/: AudioChannel.cpp  PushCallback.cpp  RTMPModel.cpp  VideoChannel.cpp  YKPusher.cpp
ykav_common/src/main/cpp/pusher/include/: AudioChannel.h  PushCallback.h  RTMPModel.h  VideoChannel.h  YKPusher.h
ykav_common/src/main/cpp/utils/: Constants.h  macro.h  safe_queue.h
ykav_common/src/main/cpp/x264/include/: x264_config.h
ykav_common/src/main/java/com/devyk/: Constants.java
ykav_common/src/main/java/com/devyk/audio/: AudioEncoder.java  AudioProcessor.java  AudioUtils.java  OnAudioEncodeListener.java
ykav_common/src/main/java/com/devyk/blacklist/: BlackListHelper.java
ykav_common/src/main/java/com/devyk/camera/: CameraData.java  CameraHolder.java  CameraListener.java  CameraUtils.java  CameraZoomListener.java
ykav_common/src/main/java/com/devyk/capture/: AudioCapture.java  CameraCapture.java
ykav_common/src/main/java/com/devyk/configuration/: AudioConfiguration.java  CameraConfiguration.java  VideoConfiguration.java
ykav_common/src/main/java/com/devyk/constant/: SopCastConstant.java
ykav_common/src/main/java/com/devyk/controller/: StreamController.java
ykav_common/src/main/java/com/devyk/entity/: Frame.java  Watermark.java  WatermarkPosition.java
ykav_common/src/main/java/com/devyk/mediacodec/: AudioMediaCodec.java  MediaCodecHelper.java  VideoMediaCodec.java
ykav_common/src/main/res/layout/: layout_camera_view.xml
ykav_sample/: build.gradle
ykav_sample/src/main/: AndroidManifest.xml
ykav_sample/src/main/res/layout/: activity_main.xml  activity_pusher.xml  activity_sample.xml  activity_soft_pusher.xml
ykav_sample/src/main/res/values/: strings.xml  styles.xml
(+111 files in other folders)
